@@ -1659,6 +1659,8 @@ EXTRA_DIST = \
   poke.pkl/integers-8.pk \
   poke.pkl/integers-9.pk \
   poke.pkl/integers-10.pk \
+  poke.pkl/integers-11.pk \
+  poke.pkl/integers-12.pk \
   poke.pkl/integers-diag-1.pk \
   poke.pkl/integers-diag-2.pk \
   poke.pkl/integers-diag-3.pk \
