@@ -1,0 +1,4 @@
+/* { dg-do run } */
+
+/* { dg-command {0B'size/#b} } */
+/* { dg-output {8UL} } */
